<resources>

    <!-- Thanks to UnDraw for all the free illustrations. https://undraw.co/illustrations -->
    <!-- Thanks to FreeSound for all the free illustrations. http://www.freesound.org/ -->

    <string name="appName">CoronaGo</string>

    <!-- Onboarding screen -->
    <string name="onboardingTitle">Slow Corona Spread</string>
    <string name="onboardingSubtitle">• Earn points by staying home or away from others\n• You save lives by just social distancing\n• You can redeem your points at a local stores.</string>
    <string name="onboardingActionGetStarted">Get Started</string>
    <string name="onboardingWhySocialDistancingWorks"><a href="https://www.washingtonpost.com/graphics/2020/world/corona-simulator/">Click here</a> to learn how social distancing saves lives</string>

    <!-- Permission screen -->
    <string name="permissionTitle">Enable Location Permission</string>
    <string name="permissionSubtitle">We use your location to determine your position. Your location data is only processed locally. It will never be shared.</string>
    <string name="permissionActionEnable">Enable</string>
    <string name="permissionAlertDenied">Location permission denied!</string>

    <!-- Home screen -->
    <string name="homeLocationSettingsCheckFailed">Location settings check failed!</string>
    <string name="homeActionQuiz">Quit</string>
    <string name="homeLabelPoints">Points</string>
    <string name="homeTitleActive">Pokemon Stay😻</string>
    <string name="homeSubtitleActive">It\'s simple, you move too much, you loose 😄</string>

    <!-- Movement Service -->
    <string name="primaryNotificationChannelName">Primary</string>
    <string name="primaryNotificationChannelDesc">Receive alerts about challenges or points gained.</string>
    <string name="defaultNotificationText">Tracking locally…</string>

    <!-- Alert screen -->
    <string name="alertActionContinue">Continue</string>
    <string name="alertTitleFirstChallengePassed">Congrats! You passed the first challenge 🎉🎉🎉</string>
    <string name="alertSubtitleFirstChallengePassed">You moved only a few feet in 30 minutes. Click continue to complete the second challenge and gain points.</string>
    <string name="alertTitleFirstChallengeFailed">Dang! You moved too much 🚶‍🤧</string>
    <string name="alertSubtitleFirstChallengeFailed">Reduce your movement in 30 minutes to pass the first challenge.</string>
    <string name="alertTitleSecondChallengePassed">Congrats! You passed the second challenge 🎉🎉🎉</string>
    <string name="alertSubtitleSecondChallengePassed">You gained some points. Keep playing, we will kick Corona\'s ass together.</string>
    <string name="alertTitleSecondChallengeFailed">Awwwww! Incorrect answer 😭😭😭</string>
    <string name="alertSubtitleSecondChallengeFailed">Brush your knowledge about Corona and try again. The better you are informed, the less the spread.</string>

    <!-- Quiz screen -->
    <string name="quizTitle">Quiz</string>
    <string name="quizSubtitle">Answer the question correctly to claim your points</string>
    <string name="quizActionConfirm">Confirm</string>
    <string name="dummyText">Lorem ipsum pisum lasum disf faf lajf ljfalf lajfl ipsum pisum lasum disf faf lajf ljfalf lajfl ipsum pisum lasum disf faf lajf ljfalf lajfl</string>
</resources>
