<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:gravity="center_horizontal"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingTop="32dp"
    android:paddingBottom="16dp"
    tools:context=".OnboardingActivity">

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/il_location"
        android:contentDescription="@null"
        />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:fontFamily="@string/fontFamilyMedium"
        android:gravity="center_horizontal"
        android:text="@string/permissionTitle"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:gravity="center_horizontal"
        android:alpha="?alphaEmphasisHigh"
        android:text="@string/permissionSubtitle"
        />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        />

    <Button
        android:id="@+id/requestPermissionButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fatButtonHeight"
        android:text="@string/permissionActionEnable"
        style="@style/Widget.AppCompat.Button.Colored"
        />
</LinearLayout>